--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-README.txt
+README
 2019-02-24  Markku-Juhani O. Saarinen <mjos@pqshield.com>
 Copyright (C) 2019, PQShield Ltd. Please see LICENSE.
 
