--- a/README
+++ b/README
@@ -8,10 +8,10 @@ cryptographic algorithms.
 Root level files:
 
     sneik_spec.pdf      Algorithm specification and supporting documentation.
-    LICENSE             A non-commercial / research / evaluation license.
-    README              This file.
     testkat.sh          Verify "ref" and "opt" implementations against KAT.
     genkat.sh           Generate KAT files (you don't need to do this).
+    LICENSE             License for this implementation.
+    README              This file.
 
 Source code and test vectors for SNEIKEN AEADs:
 
@@ -29,9 +29,9 @@ Each directory has a "ref" portable reference implementation, somewhat smaller
 versions utilizing assembly-optimized permutations: "avr" for 8-bit Atmel AVR,
 and "arm" for 32-bit ARM Cortex M3/M4 platforms.
 
-Each directory contains test vectors generated with NIST's standard
-`genkat_aead.c` and `genkat_hash.c` programs. Most of the source code is
-usually symlinked from the "common" directory:
+Each directory furthermore contains test vectors generated with NIST's 
+standard `genkat_aead.c` and `genkat_hash.c` programs. Most of the source 
+code is usually symlinked from the "common" directory:
 
     common/sneik_f512   Implementations of the sneik_f512() permutation.
     common/ref_blnk     Reference implementation, using BLNK code.
