--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+nb. I will be updating the documentation and implementation to SNEIK v 1.1
+before the end of June 2019. The modification is very minor, so these 
+implementations can still be used to measure engineering aspects of SNEIK.
+However, this is no longer the "reference" implementation.
+
+
+Cheers,
+- markku	May 17, 2019
+
+-----
+
 README
 2019-02-24  Markku-Juhani O. Saarinen <mjos@pqshield.com>
 Copyright (C) 2019, PQShield Ltd. Please see LICENSE.
