downgraded to historical

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+
+***********************************************************************
+** 2020-02-05:  This package is kept here for historical reasons and **
+** is no longer maintained. Please do not use it in your projects.   **
+***********************************************************************
+
 README
 2019-02-24  Markku-Juhani O. Saarinen <mjos@pqshield.com>
 Copyright (C) 2019, PQShield Ltd. Please see LICENSE.
